2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_store):
	* libmuine/db.h:
	* src/CoverDatabase.cs:
	* src/Database.cs:
	* src/SongDatabase.cs:

	Don't require an EncodeFunction anymore.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* src/HandleView.cs:

	Fix for Mono 1.1.x. Patch by Peter Johanson.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* configure.in:
	* libmuine/Makefile.am:
	R libmuine/string-utils.c:
	R libmuine/string-utils.h:
	* src/Album.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Depend on new born GUnicode#:
	http://www.jbaayen.dds.nl/gunicode-sharp.html

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	0.8.1pre2.
	
	* src/AddWindow.cs:

	Small cleanup.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/Makefile.am:
	* libmuine/pointer-list-model.c:
	(pointer_list_model_drag_data_received),
	(pointer_list_model_iter_get_pointer):
	* libmuine/pointer-list-model.h:
	R libmuine/pointer-list-view.c:
	R libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowList.cs:
	* src/HandleModel.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:
	* src/muine.exe.config.in:

	Wrap pointer-list-model as HandleModel, ditch pointer-list-view,
	and make HandleView a pure C# thing using HandleModel.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* DBusLib/Makefile.am:
	* PluginLib/Makefile.am:
	* configure.in:

	Remove --disable-gac-install option, instead use the /root
	gacutil option to install libraries.

2005-01-23  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* TODO:
	* configure.in:
	* data/glade/PlaylistWindow.glade:
	* libmuine/Makefile.am:
	R libmuine/rb-ellipsizing-label.c:
	R libmuine/rb-ellipsizing-label.h:
	* src/AddWindow.cs:
	* src/CellRendererText.cs:
	* src/EllipsizingLabel.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
